web-server-yaml/frontend-deployment2.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend2
  labels:
    app: guestbook2
spec:
  selector:
    matchLabels:
      app: guestbook2
      tier: frontend2
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook2
        tier: frontend2
    spec:
      containers:
      - name: php-redis
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
