web-server-yaml/external-service.yaml
kind: Service
apiVersion: v1

metadata:
    name: frontend-svc

spec:
    type: NodePort
    selector:
        app: guestbook
        tier: frontend
    ports:
        - nodePort: 31870
          port: 80
          targetPort: 80
