web-server-yaml/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: xuran.com
      http:
        paths:
          - backend:
              serviceName: frontend-svc
              servicePort: 80
